<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chemistry"
    android:orientation="horizontal"
    tools:context=".Achievements">

    <Button
        android:id="@+id/achievementMenu"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/menu"
        android:text="@string/menu"
        app:layout_constraintBottom_toTopOf="@+id/achivementHighScore"
        app:layout_constraintEnd_toStartOf="@+id/AchievementTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/AchievementTitle"
        android:layout_width="279dp"
        android:layout_height="46dp"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="226dp"
        android:layout_marginRight="226dp"
        android:layout_marginBottom="21dp"
        android:text="@string/achievementTitle"
        android:textColor="@color/titles"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/achivementHighScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/achievementMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBarHighScore"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="646dp"
        android:layout_height="31dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/CompleteGameStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achivementHighScore" />

    <TextView
        android:id="@+id/flamesStatus"
        android:layout_width="233dp"
        android:layout_height="38dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="30dp"
        android:text="@string/gameStatus"
        app:layout_constraintBottom_toTopOf="@+id/compoundStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/flamesTopicTitle"
        app:layout_constraintTop_toBottomOf="@+id/CompleteGameStatus" />

    <TextView
        android:id="@+id/compoundStatus"
        android:layout_width="233dp"
        android:layout_height="38dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="51dp"
        android:text="@string/CompoundStatus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/compoundTopicTitle"
        app:layout_constraintTop_toBottomOf="@+id/flamesStatus" />

    <TextView
        android:id="@+id/CompleteGameStatus"
        android:layout_width="235dp"
        android:layout_height="41dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:text="@string/FlamesStatus"
        app:layout_constraintBottom_toTopOf="@+id/flamesStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/completeGameTitle"
        app:layout_constraintTop_toBottomOf="@+id/progressBarHighScore" />

    <TextView
        android:id="@+id/achivementHighScore"
        android:layout_width="194dp"
        android:layout_height="36dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginEnd="498dp"
        android:layout_marginRight="498dp"
        android:text="@string/highScore"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBarHighScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achievementMenu" />

    <TextView
        android:id="@+id/completeGameTitle"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="192dp"
        android:layout_marginRight="192dp"
        android:layout_marginBottom="38dp"
        android:text="@string/gameComplete"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/flamesTopicTitle"
        app:layout_constraintEnd_toStartOf="@+id/CompleteGameStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarHighScore" />

    <TextView
        android:id="@+id/flamesTopicTitle"
        android:layout_width="263dp"
        android:layout_height="33dp"
        android:layout_marginStart="38dp"
        android:layout_marginLeft="38dp"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:text="@string/FlamesCompletion"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/compoundTopicTitle"
        app:layout_constraintEnd_toStartOf="@+id/flamesStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completeGameTitle" />

    <TextView
        android:id="@+id/compoundTopicTitle"
        android:layout_width="282dp"
        android:layout_height="33dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:layout_marginBottom="55dp"
        android:text="@string/CompoundCompletion"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/compoundStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flamesTopicTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>