<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chemistry"
    android:orientation="horizontal"
    tools:context=".Settings">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="249dp"
        android:layout_marginRight="249dp"
        android:layout_marginBottom="40dp"
        android:text="@string/ScoreTitle"
        android:textColor="@color/titles"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/musicSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settingsButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginBottom="347dp"
        android:text="@string/menu"
        android:background="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/settingsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/musicSwitch"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="213dp"
        android:layout_marginRight="213dp"
        android:text="@string/musicSwitch"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />

    <Switch
        android:id="@+id/soundSwitch"
        android:layout_width="351dp"
        android:layout_height="55dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:layout_marginBottom="19dp"
        android:text="@string/soundSwitch"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/backgroundSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicSwitch" />

    <Switch
        android:id="@+id/backgroundSwitch"
        android:layout_width="351dp"
        android:layout_height="55dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginEnd="212dp"
        android:layout_marginRight="212dp"
        android:layout_marginBottom="104dp"
        android:text="@string/backgroundSwitch"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/soundSwitch" />
</androidx.constraintlayout.widget.ConstraintLayout>