<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chemistry"
    android:orientation="horizontal"
    tools:context=".Topics">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/topic"
        android:layout_width="299dp"
        android:layout_height="51dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="238dp"
        android:layout_marginRight="238dp"
        android:layout_marginBottom="71dp"
        android:text="@string/topicsTitle"
        android:textColor="@color/titles"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/flames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/flames"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="307dp"
        android:layout_marginLeft="307dp"
        android:layout_marginEnd="338dp"
        android:layout_marginRight="338dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/buttons"
        android:text="@string/flameButton"
        app:layout_constraintBottom_toTopOf="@+id/compoundButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic" />

    <Button
        android:id="@+id/compoundButton"
        android:layout_width="126dp"
        android:layout_height="45dp"
        android:layout_marginStart="290dp"
        android:layout_marginLeft="290dp"
        android:layout_marginEnd="317dp"
        android:layout_marginRight="317dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/buttons"
        android:text="@string/compoundButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flames" />

    <Button
        android:id="@+id/scoreMenu"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/menu"
        android:text="@string/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/topic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>