<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chemistry"
    android:orientation="horizontal"
    tools:context=".Score">

    <TextView
        android:id="@+id/scoreTitle"
        android:layout_width="252dp"
        android:layout_height="55dp"
        android:layout_marginStart="131dp"
        android:layout_marginLeft="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="244dp"
        android:layout_marginRight="244dp"
        android:text="@string/ScoreTitle"
        android:textColor="@color/titles"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/scoreMenu"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="63dp"
        android:background="@drawable/menu"
        android:text="@string/menu"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toStartOf="@+id/scoreTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="154dp"
        android:layout_height="33dp"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp"
        android:layout_marginBottom="54dp"
        android:text="@string/usernameTitle"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/UserData"
        app:layout_constraintEnd_toStartOf="@+id/Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:layout_marginRight="76dp"
        android:layout_marginBottom="54dp"
        android:text="@string/DateTitle"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/UserData"
        app:layout_constraintEnd_toStartOf="@+id/Score"
        app:layout_constraintStart_toEndOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/scoreTitle" />

    <TextView
        android:id="@+id/Score"
        android:layout_width="126dp"
        android:layout_height="30dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginBottom="54dp"
        android:text="@string/ScoreTitle"
        android:textColor="@color/titles"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/UserData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/UserData"
        android:layout_width="605dp"
        android:layout_height="113dp"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />
</androidx.constraintlayout.widget.ConstraintLayout>