<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chemistry"
    android:orientation="horizontal"
    tools:context=".Start">

    <Button
        android:id="@+id/Score"
        android:layout_width="195dp"
        android:layout_height="62dp"
        android:layout_marginStart="254dp"
        android:layout_marginLeft="254dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="282dp"
        android:layout_marginRight="282dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/scorebutton"
        android:text="@string/score"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Achievements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Start" />

    <Button
        android:id="@+id/Settings"
        android:layout_width="77dp"
        android:layout_height="61dp"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="313dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/settingsbutton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Achievements"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Start"
        android:layout_width="116dp"
        android:layout_height="62dp"
        android:layout_marginStart="296dp"
        android:layout_marginLeft="296dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="319dp"
        android:layout_marginRight="319dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/startbutton"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Test" />

    <Button
        android:id="@+id/Achievements"
        android:layout_width="173dp"
        android:layout_height="62dp"
        android:layout_marginStart="255dp"
        android:layout_marginLeft="255dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="37dp"
        android:background="@drawable/achievebutton"
        android:text="@string/achievement"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Settings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Score" />

    <TextView
        android:id="@+id/Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="254dp"
        android:layout_marginLeft="254dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="254dp"
        android:layout_marginRight="254dp"
        android:text="@string/title"
        android:textColor="@color/ColorTitle"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>