<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chemistry"
    android:orientation="horizontal"
    tools:context=".Flames">

    <TextView
        android:id="@+id/titleLevelOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/FlamesLevelOne"
        android:textColor="@color/ColorTitle"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/petriImage"
        app:layout_constraintEnd_toStartOf="@+id/scoreLevelOne"
        app:layout_constraintStart_toEndOf="@+id/menuFlameOne"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/calciumImage"
        android:layout_width="123dp"
        android:layout_height="83dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/calciumtile"
        app:layout_constraintBottom_toTopOf="@+id/CopperImage"
        app:layout_constraintEnd_toStartOf="@+id/petriImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuFlameOne" />

    <ImageView
        android:id="@+id/LithiumImage"
        android:layout_width="121dp"
        android:layout_height="78dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/lithiumtile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/petriImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CopperImage" />

    <ImageView
        android:id="@+id/CopperImage"
        android:layout_width="121dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/coppertile"
        app:layout_constraintBottom_toTopOf="@+id/LithiumImage"
        app:layout_constraintEnd_toStartOf="@+id/petriImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calciumImage" />

    <ImageView
        android:id="@+id/PotassiumImage"
        android:layout_width="131dp"
        android:layout_height="88dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/potassiumtile"
        app:layout_constraintBottom_toTopOf="@+id/LeadImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/petriImage"
        app:layout_constraintTop_toBottomOf="@+id/ScoreNumber" />

    <ImageView
        android:id="@+id/RadiumImage"
        android:layout_width="129dp"
        android:layout_height="86dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="28dp"
        android:src="@drawable/radium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/petriImage"
        app:layout_constraintTop_toBottomOf="@+id/LeadImage" />

    <ImageView
        android:id="@+id/LeadImage"
        android:layout_width="131dp"
        android:layout_height="86dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:src="@drawable/lead"
        app:layout_constraintBottom_toTopOf="@+id/RadiumImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/petriImage"
        app:layout_constraintTop_toBottomOf="@+id/PotassiumImage" />

    <Button
        android:id="@+id/menuFlameOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/menu"
        android:text="@string/menu"
        app:layout_constraintBottom_toTopOf="@+id/calciumImage"
        app:layout_constraintEnd_toStartOf="@+id/titleLevelOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/petriImage"
        android:layout_width="398dp"
        android:layout_height="324dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="13dp"
        android:src="@drawable/petri"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/RadiumImage"
        app:layout_constraintStart_toEndOf="@+id/calciumImage"
        app:layout_constraintTop_toBottomOf="@+id/titleLevelOne" />

    <TextView
        android:id="@+id/scoreLevelOne"
        android:layout_width="92dp"
        android:layout_height="35dp"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="26dp"
        android:text="@string/Score"
        app:layout_constraintBottom_toTopOf="@+id/petriImage"
        app:layout_constraintEnd_toStartOf="@+id/ScoreNumber"
        app:layout_constraintStart_toEndOf="@+id/titleLevelOne"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ScoreNumber"
        android:layout_width="108dp"
        android:layout_height="37dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        app:layout_constraintBottom_toTopOf="@+id/PotassiumImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreLevelOne"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>